# SPD-SLM-Guardrailing

./: .gitignore  README.md  pyproject.toml
configs/: thresholds.yaml  train_config.yaml
data/processed/: smoke_test.jsonl
docs/superpowers/plans/: 2026-05-20-spd-categorization-implementation.md
docs/superpowers/specs/: 2026-05-20-spd-categorization-design.md
scripts/: banking_chat_scenarios.py  benchmark_latency.py  build_hungarian_dataset.py  diverse_scenarios.py  download_model.py  export_dataset_html.py  long_form_examples.py
src/spd/: categories.py  data.py  dedup.py  eval_report.py  evaluate.py  export_onnx.py  inference.py  model.py  reporting.py  service.py  synth.py  train.py
tests/: test_categories.py  test_data.py  test_dedup.py  test_evaluate.py  test_inference.py  test_model.py  test_service.py
