[build-system]
requires = ["setuptools>=70"]
build-backend = "setuptools.build_meta"

[project]
name = "slm-spd-guardrailing"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.40",
    "torch>=2.2",
    "onnxruntime>=1.18",
    "onnx>=1.16",
    "onnxscript>=0.1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "scikit-learn>=1.4",
    "prometheus-client>=0.20",
    "numpy>=1.26",
    "openai>=1.30",
    "accelerate>=0.27",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]
